@@ -8,7 +8,7 @@
         <tr>
             <td colspan="2" class="pluginCellText pluginCellFill" style="padding-left: 5px;">
                 {!if smilies}
-                <div style="width:100%; padding:10px; clear:both;" id="smileys">
+                <div style="width:95%; padding:10px; clear:both;" id="smileys">
                 {smilies}
                 </div>
                 {!endif}
