@@ -479,10 +479,12 @@ function SESS_endUserSession($userid)
 {
     global $_TABLES;
 
-    $sql = "DELETE FROM {$_TABLES['sessions']} WHERE (uid = ".(int)$userid.")";
-    $result = DB_query($sql);
-    $sql = "DELETE FROM {$_TABLES['tokens']} WHERE (owner_id = ".(int)$userid.")";
-    $result = DB_query($sql);
+    if ( !defined('DEMO_MODE') ) {
+        $sql = "DELETE FROM {$_TABLES['sessions']} WHERE (uid = ".(int)$userid.")";
+        $result = DB_query($sql);
+        $sql = "DELETE FROM {$_TABLES['tokens']} WHERE (owner_id = ".(int)$userid.")";
+        $result = DB_query($sql);
+    }
 
     return 1;
 }
